# DeepNeuralNetwork

./: .gitmodules  CMakeLists.txt  Doxyfile  README.md  main.cpp
deep-neural-network/include/dnn/: #optimizer.hpp#  .#optimizer.hpp  abst_layer.hpp  activation.hpp  assert.hpp  deep_neural_network.hpp  dense.hpp  dropout.hpp  loss.hpp  math_util.hpp  optimizer.hpp  runtime_assert.hpp
deep-neural-network/src/: activation.cpp  deep_neural_network.cpp  math_util.hpp
doc/: CMakeLists.txt  Doxyfile.in
include/: math_util.hpp  neural_network.hpp  neuron.hpp
lib/include/dnn/: deep_neural_network.hpp  dense.hpp  dropout.hpp  loss.hpp  optimizer.hpp
src/: #neuron.cpp#  .#neuron.cpp  neural_network.cpp  neuron.cpp
test/: CMakeLists.txt  activation.cpp  dense.cpp
